# IncidentIQ

./: .claudeignore  .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
ai-service/: .env.example  pyproject.toml  requirements.txt  ruff.toml
ai-service/app/: main.py
ai-service/app/api/v1/: health.py
ai-service/app/clients/: core_service_client.py  elasticsearch_client.py  ollama_client.py
ai-service/app/consumers/: incident_event_consumer.py
ai-service/app/core/: config.py  logging.py
ai-service/app/models/: ai_result.py  incident_event.py
ai-service/app/services/: categorization_service.py  dlq_service.py  prioritization_service.py  resolution_suggestion_service.py
ai-service/scripts/: seed_elasticsearch.py
ai-service/seed-data/: service_metadata.json
ai-service/seed-data/runbooks/: api-rate-limit-cascade.md  auth-sso-token-expiry-storm.md  database-connection-pool-exhaustion.md  dns-cdn-propagation.md  elasticsearch-cluster-red.md  kafka-consumer-lag.md  kubernetes-pod-crashloop.md  memory-leak-oom-kill.md  payment-gateway-timeout.md  redis-cache-stampede.md  ssl-certificate-expiry.md  webhook-delivery-failures.md
backend-core/: Dockerfile  pom.xml
docs/: ClaudeCode_PromptPlaybook.md  Guardrails.md  IncidentIQ_SDD.md
docs/api-contracts/kafka-schemas/: incident.ai.completed.schema.json  incident.ai.dlq.schema.json  incident.created.schema.json  (+1 more)
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  types.ts
infra/: .env.example  docker-compose.yml
(+110 files in other folders)
