[project]
name = "incidentiq-ai"
version = "0.1.0"
description = "IncidentIQ AI Intelligence Service"
requires-python = ">=3.12"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py312"]
